vDSP.h

    
    typedef unsigned long vDSP_Length;
typedef long long vDSP_Stride;
typedef long vDSP_Stride;
typedef struct DSPComplex {
  float real;
  float imag;
} DSPComplex;
typedef struct DSPDoubleComplex {
  double real;
  double imag;
} DSPDoubleComplex;
typedef struct DSPSplitComplex {
  float *__nonnull realp;
  float *__nonnull imagp;
} DSPSplitComplex;
typedef struct DSPDoubleSplitComplex {
  double *__nonnull realp;
  double *__nonnull imagp;
} DSPDoubleSplitComplex;
typedef int FFTDirection;
typedef struct OpaqueFFTSetup *FFTSetup;
typedef struct OpaqueFFTSetupD *FFTSetupD;
extern void vDSP_ctoz(const DSPComplex *__C, vDSP_Stride __IC,
                      const DSPSplitComplex *__Z, vDSP_Stride __IZ,
                      vDSP_Length __N) API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_ctozD(const DSPDoubleComplex *__C, vDSP_Stride __IC,
                       const DSPDoubleSplitComplex *__Z, vDSP_Stride __IZ,
                       vDSP_Length __N) API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_ztoc(const DSPSplitComplex *__Z, vDSP_Stride __IZ,
                      DSPComplex *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_ztocD(const DSPDoubleSplitComplex *__Z, vDSP_Stride __IZ,
                       DSPDoubleComplex *__C, vDSP_Stride __IC, vDSP_Length __N)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fft2d_zop(FFTSetup __Setup, const DSPSplitComplex *__A,
                           vDSP_Stride __IA0, vDSP_Stride __IA1,
                           const DSPSplitComplex *__C, vDSP_Stride __IC0,
                           vDSP_Stride __IC1, vDSP_Length __Log2N0,
                           vDSP_Length __Log2N1, FFTDirection __Direction)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_fft2d_zopD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                            vDSP_Stride __IA0, vDSP_Stride __IA1,
                            const DSPDoubleSplitComplex *__C, vDSP_Stride __IC0,
                            vDSP_Stride __IC1, vDSP_Length __Log2N0,
                            vDSP_Length __Log2N1, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fft2d_zopt(FFTSetup __Setup, const DSPSplitComplex *__A,
                            vDSP_Stride __IA0, vDSP_Stride __IA1,
                            const DSPSplitComplex *__C, vDSP_Stride __IC0,
                            vDSP_Stride __IC1, const DSPSplitComplex *__Buffer,
                            vDSP_Length __Log2N0, vDSP_Length __Log2N1,
                            FFTDirection __Direction)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void
vDSP_fft2d_zoptD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                 vDSP_Stride __IA0, vDSP_Stride __IA1,
                 const DSPDoubleSplitComplex *__C, vDSP_Stride __IC0,
                 vDSP_Stride __IC1, const DSPDoubleSplitComplex *__Buffer,
                 vDSP_Length __Log2N0, vDSP_Length __Log2N1,
                 FFTDirection __Direction) API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fft2d_zrip(FFTSetup __Setup, const DSPSplitComplex *__C,
                            vDSP_Stride __IC0, vDSP_Stride __IC1,
                            vDSP_Length __Log2N0, vDSP_Length __Log2N1,
                            FFTDirection __Direction)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void
vDSP_fft2d_zripD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__C,
                 vDSP_Stride __IC0, vDSP_Stride __IC1, vDSP_Length __Log2N0,
                 vDSP_Length __Log2N1, FFTDirection __flag)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fft2d_zript(FFTSetup __Setup, const DSPSplitComplex *__C,
                             vDSP_Stride __IC0, vDSP_Stride __IC1,
                             const DSPSplitComplex *__Buffer,
                             vDSP_Length __Log2N0, vDSP_Length __Log2N1,
                             FFTDirection __Direction)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void
vDSP_fft2d_zriptD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__C,
                  vDSP_Stride __IC0, vDSP_Stride __IC1,
                  const DSPDoubleSplitComplex *__Buffer, vDSP_Length __Log2N0,
                  vDSP_Length __Log2N1, FFTDirection __flag)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fft2d_zrop(FFTSetup __Setup, const DSPSplitComplex *__A,
                            vDSP_Stride __IA0, vDSP_Stride __IA1,
                            const DSPSplitComplex *__C, vDSP_Stride __IC0,
                            vDSP_Stride __IC1, vDSP_Length __Log2N0,
                            vDSP_Length __Log2N1, FFTDirection __Direction)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void vDSP_fft2d_zropt(FFTSetup __Setup, const DSPSplitComplex *__A,
                             vDSP_Stride __IA0, vDSP_Stride __IA1,
                             const DSPSplitComplex *__C, vDSP_Stride __IC0,
                             vDSP_Stride __IC1, const DSPSplitComplex *__Buffer,
                             vDSP_Length __Log2N0, vDSP_Length __Log2N1,
                             FFTDirection __Direction)
    API_AVAILABLE(macos(10.0), ios(4.0));
extern void
vDSP_fft2d_zropD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                 vDSP_Stride __IA0, vDSP_Stride __IA1,
                 const DSPDoubleSplitComplex *__C, vDSP_Stride __IC0,
                 vDSP_Stride __IC1, vDSP_Length __Log2N0, vDSP_Length __Log2N1,
                 FFTDirection __Direction) API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fft2d_zroptD(
    FFTSetupD __Setup, const DSPDoubleSplitComplex *__A, vDSP_Stride __IA0,
    vDSP_Stride __IA1, const DSPDoubleSplitComplex *__C, vDSP_Stride __IC0,
    vDSP_Stride __IC1, const DSPDoubleSplitComplex *__Buffer,
    vDSP_Length __Log2N0, vDSP_Length __Log2N1, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zip(FFTSetup __Setup, const DSPSplitComplex *__C,
                          vDSP_Stride __IC, vDSP_Stride __IM,
                          vDSP_Length __Log2N, vDSP_Length __M,
                          FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zipD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__C,
                           vDSP_Stride __IC, vDSP_Stride __IM,
                           vDSP_Length __Log2N, vDSP_Length __M,
                           FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zipt(FFTSetup __Setup, const DSPSplitComplex *__C,
                           vDSP_Stride __IC, vDSP_Stride __IM,
                           const DSPSplitComplex *__Buffer, vDSP_Length __Log2N,
                           vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_ziptD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__C,
                            vDSP_Stride __IC, vDSP_Stride __IM,
                            const DSPDoubleSplitComplex *__Buffer,
                            vDSP_Length __Log2N, vDSP_Length __M,
                            FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zop(FFTSetup __Setup, const DSPSplitComplex *__A,
                          vDSP_Stride __IA, vDSP_Stride __IMA,
                          const DSPSplitComplex *__C, vDSP_Stride __IC,
                          vDSP_Stride __IMC, vDSP_Length __Log2N,
                          vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zopD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                           vDSP_Stride __IA, vDSP_Stride __IMA,
                           const DSPDoubleSplitComplex *__C, vDSP_Stride __IC,
                           vDSP_Stride __IMC, vDSP_Length __Log2N,
                           vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void
vDSP_fftm_zopt(FFTSetup __Setup, const DSPSplitComplex *__A, vDSP_Stride __IA,
               vDSP_Stride __IMA, const DSPSplitComplex *__C, vDSP_Stride __IC,
               vDSP_Stride __IMC, const DSPSplitComplex *__Buffer,
               vDSP_Length __Log2N, vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void
vDSP_fftm_zoptD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                vDSP_Stride __IA, vDSP_Stride __IMA,
                const DSPDoubleSplitComplex *__C, vDSP_Stride __IC,
                vDSP_Stride __IMC, const DSPDoubleSplitComplex *__Buffer,
                vDSP_Length __Log2N, vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zrip(FFTSetup __Setup, const DSPSplitComplex *__C,
                           vDSP_Stride __IC, vDSP_Stride __IM,
                           vDSP_Length __Log2N, vDSP_Length __M,
                           FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zripD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__C,
                            vDSP_Stride __IC, vDSP_Stride __IM,
                            vDSP_Length __Log2N, vDSP_Length __M,
                            FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void
vDSP_fftm_zript(FFTSetup __Setup, const DSPSplitComplex *__C, vDSP_Stride __IC,
                vDSP_Stride __IM, const DSPSplitComplex *__Buffer,
                vDSP_Length __Log2N, vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void
vDSP_fftm_zriptD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__C,
                 vDSP_Stride __IC, vDSP_Stride __IM,
                 const DSPDoubleSplitComplex *__Buffer, vDSP_Length __Log2N,
                 vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zrop(FFTSetup __Setup, const DSPSplitComplex *__A,
                           vDSP_Stride __IA, vDSP_Stride __IMA,
                           const DSPSplitComplex *__C, vDSP_Stride __IC,
                           vDSP_Stride __IMC, vDSP_Length __Log2N,
                           vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void
vDSP_fftm_zropt(FFTSetup __Setup, const DSPSplitComplex *__A, vDSP_Stride __IA,
                vDSP_Stride __IMA, const DSPSplitComplex *__C, vDSP_Stride __IC,
                vDSP_Stride __IMC, const DSPSplitComplex *__Buffer,
                vDSP_Length __Log2N, vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void vDSP_fftm_zropD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                            vDSP_Stride __IA, vDSP_Stride __IMA,
                            const DSPDoubleSplitComplex *__C, vDSP_Stride __IC,
                            vDSP_Stride __IMC, vDSP_Length __Log2N,
                            vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
extern void
vDSP_fftm_zroptD(FFTSetupD __Setup, const DSPDoubleSplitComplex *__A,
                 vDSP_Stride __IA, vDSP_Stride __IMA,
                 const DSPDoubleSplitComplex *__C, vDSP_Stride __IC,
                 vDSP_Stride __IMC, const DSPDoubleSplitComplex *__Buffer,
                 vDSP_Length __Log2N, vDSP_Length __M, FFTDirection __Direction)
    API_AVAILABLE(macos(10.2), ios(4.0));
void vDSP_FFT16_copv(float *__Output, const float *__Input,
                     FFTDirection __Direction)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_FFT32_copv(float *__Output, const float *__Input,
                     FFTDirection __Direction)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_FFT16_zopv(float *__Or, float *__Oi, const float *__Ir,
                     const float *__Ii, FFTDirection __Direction)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_FFT32_zopv(float *__Or, float *__Oi, const float *__Ir,
                     const float *__Ii, FFTDirection __Direction)
    API_AVAILABLE(macos(10.6), ios(4.0));
typedef struct vDSP_DFT_SetupStruct *vDSP_DFT_Setup;
typedef struct vDSP_DFT_SetupStructD *vDSP_DFT_SetupD;
typedef struct vDSP_DFT_Interleaved_SetupStruct *vDSP_DFT_Interleaved_Setup;
typedef struct vDSP_DFT_Interleaved_SetupStructD *vDSP_DFT_Interleaved_SetupD;
__nullable vDSP_DFT_Setup
vDSP_DFT_CreateSetup(__nullable vDSP_DFT_Setup __Previous, vDSP_Length __Length)
    API_AVAILABLE(macos(10.6), ios(4.0));
__nullable vDSP_DFT_Setup vDSP_DFT_zop_CreateSetup(
    __nullable vDSP_DFT_Setup __Previous, vDSP_Length __Length,
    vDSP_DFT_Direction __Direction) API_AVAILABLE(macos(10.7), ios(4.0));
__nullable vDSP_DFT_SetupD vDSP_DFT_zop_CreateSetupD(
    __nullable vDSP_DFT_SetupD __Previous, vDSP_Length __Length,
    vDSP_DFT_Direction __Direction) API_AVAILABLE(macos(10.9), ios(7.0));
__nullable vDSP_DFT_Setup vDSP_DFT_zrop_CreateSetup(
    __nullable vDSP_DFT_Setup __Previous, vDSP_Length __Length,
    vDSP_DFT_Direction __Direction) API_AVAILABLE(macos(10.7), ios(4.0));
__nullable vDSP_DFT_SetupD vDSP_DFT_zrop_CreateSetupD(
    __nullable vDSP_DFT_SetupD __Previous, vDSP_Length __Length,
    vDSP_DFT_Direction __Direction) API_AVAILABLE(macos(10.9), ios(7.0));
void vDSP_DFT_DestroySetup(__nullable vDSP_DFT_Setup __Setup)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_DFT_DestroySetupD(__nullable vDSP_DFT_SetupD __Setup)
    API_AVAILABLE(macos(10.9), ios(7.0));
void vDSP_DFT_zop(const struct vDSP_DFT_SetupStruct *__Setup, const float *__Ir,
                  const float *__Ii, vDSP_Stride __Is, float *__Or, float *__Oi,
                  vDSP_Stride __Os, vDSP_DFT_Direction __Direction)
    API_AVAILABLE(macos(10.6), ios(4.0));
void vDSP_DFT_Execute(const struct vDSP_DFT_SetupStruct *__Setup,
                      const float *__Ir, const float *__Ii, float *__Or,
                      float *__Oi) API_AVAILABLE(macos(10.7), ios(4.0));
void vDSP_DFT_ExecuteD(const struct vDSP_DFT_SetupStructD *__Setup,
                       const double *__Ir, const double *__Ii, double *__Or,
                       double *__Oi) API_AVAILABLE(macos(10.9), ios(7.0));
__nullable vDSP_DFT_Setup
vDSP_DCT_CreateSetup(__nullable vDSP_DFT_Setup __Previous, vDSP_Length __Length,
                     vDSP_DCT_Type __Type) API_AVAILABLE(macos(10.9), ios(6.0));
void vDSP_DCT_Execute(const struct vDSP_DFT_SetupStruct *__Setup,
                      const float *__Input, float *__Output)
    API_AVAILABLE(macos(10.9), ios(6.0));
__nullable vDSP_DFT_Interleaved_Setup vDSP_DFT_Interleaved_CreateSetup(
    __nullable vDSP_DFT_Interleaved_Setup Previous, vDSP_Length Length,
    vDSP_DFT_Direction Direction, vDSP_DFT_RealtoComplex RealtoComplex)
    API_AVAILABLE(macos(12.0), ios(15.0), watchos(8.0), tvos(15.0));
__nullable vDSP_DFT_Interleaved_SetupD vDSP_DFT_Interleaved_CreateSetupD(
    __nullable vDSP_DFT_Interleaved_SetupD Previous, vDSP_Length Length,
    vDSP_DFT_Direction Direction, vDSP_DFT_RealtoComplex RealtoComplex)
    API_AVAILABLE(macos(12.0), ios(15.0), watchos(8.0), tvos(15.0));
void vDSP_DFT_Interleaved_Execute(const vDSP_DFT_Interleaved_Setup Setup,
                                  const DSPComplex *Iri, DSPComplex *Ori)
    API_AVAILABLE(macos(12.0), ios(15.0), watchos(8.0), tvos(15.0));
void vDSP_DFT_Interleaved_ExecuteD(const vDSP_DFT_Interleaved_SetupD Setup,
                                   const DSPDoubleComplex *Iri,
                                   DSPDoubleComplex *Ori)
    API_AVAILABLE(macos(12.0), ios(15.0), watchos(8.0), tvos(15.0));
void vDSP_DFT_Interleaved_DestroySetup(
    __nullable vDSP_DFT_Interleaved_Setup Setup)
    API_AVAILABLE(macos(12.0), ios(15.0), watchos(8.0), tvos(15.0));
void vDSP_DFT_Interleaved_DestroySetupD(
    __nullable vDSP_DFT_Interleaved_SetupD Setup)
    API_AVAILABLE(macos(12.0), ios(15.0), watchos(8.0), tvos(15.0));