src/c.zig


// -- 2D complex-to-complex, out-of-place --
pub extern fn vDSP_fft2d_zop(Setup: FFTSetup, A: *const SplitComplex, IA0: Stride, IA1: Stride, C: *const SplitComplex, IC0: Stride, IC1: Stride, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zopD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA0: Stride, IA1: Stride, C: *const DoubleSplitComplex, IC0: Stride, IC1: Stride, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zopt(Setup: FFTSetup, A: *const SplitComplex, IA0: Stride, IA1: Stride, C: *const SplitComplex, IC0: Stride, IC1: Stride, Buffer: *const SplitComplex, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zoptD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA0: Stride, IA1: Stride, C: *const DoubleSplitComplex, IC0: Stride, IC1: Stride, Buffer: *const DoubleSplitComplex, Log2N0: Length, Log2N1: Length, Direction: c_int) void;

// -- 2D real-to-complex, in-place --
pub extern fn vDSP_fft2d_zrip(Setup: FFTSetup, C: *const SplitComplex, IC0: Stride, IC1: Stride, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zripD(Setup: FFTSetupD, C: *const DoubleSplitComplex, IC0: Stride, IC1: Stride, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zript(Setup: FFTSetup, C: *const SplitComplex, IC0: Stride, IC1: Stride, Buffer: *const SplitComplex, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zriptD(Setup: FFTSetupD, C: *const DoubleSplitComplex, IC0: Stride, IC1: Stride, Buffer: *const DoubleSplitComplex, Log2N0: Length, Log2N1: Length, Direction: c_int) void;

// -- 2D real-to-complex, out-of-place --
pub extern fn vDSP_fft2d_zrop(Setup: FFTSetup, A: *const SplitComplex, IA0: Stride, IA1: Stride, C: *const SplitComplex, IC0: Stride, IC1: Stride, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zropD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA0: Stride, IA1: Stride, C: *const DoubleSplitComplex, IC0: Stride, IC1: Stride, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zropt(Setup: FFTSetup, A: *const SplitComplex, IA0: Stride, IA1: Stride, C: *const SplitComplex, IC0: Stride, IC1: Stride, Buffer: *const SplitComplex, Log2N0: Length, Log2N1: Length, Direction: c_int) void;
pub extern fn vDSP_fft2d_zroptD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA0: Stride, IA1: Stride, C: *const DoubleSplitComplex, IC0: Stride, IC1: Stride, Buffer: *const DoubleSplitComplex, Log2N0: Length, Log2N1: Length, Direction: c_int) void;

// -- Multiple FFT, complex in-place --
pub extern fn vDSP_fftm_zip(Setup: FFTSetup, C: *const SplitComplex, IC: Stride, IM: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zipD(Setup: FFTSetupD, C: *const DoubleSplitComplex, IC: Stride, IM: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zipt(Setup: FFTSetup, C: *const SplitComplex, IC: Stride, IM: Stride, Buffer: *const SplitComplex, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_ziptD(Setup: FFTSetupD, C: *const DoubleSplitComplex, IC: Stride, IM: Stride, Buffer: *const DoubleSplitComplex, Log2N: Length, M: Length, Direction: c_int) void;

// -- Multiple FFT, complex out-of-place --
pub extern fn vDSP_fftm_zop(Setup: FFTSetup, A: *const SplitComplex, IA: Stride, IMA: Stride, C: *const SplitComplex, IC: Stride, IMC: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zopD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA: Stride, IMA: Stride, C: *const DoubleSplitComplex, IC: Stride, IMC: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zopt(Setup: FFTSetup, A: *const SplitComplex, IA: Stride, IMA: Stride, C: *const SplitComplex, IC: Stride, IMC: Stride, Buffer: *const SplitComplex, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zoptD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA: Stride, IMA: Stride, C: *const DoubleSplitComplex, IC: Stride, IMC: Stride, Buffer: *const DoubleSplitComplex, Log2N: Length, M: Length, Direction: c_int) void;

// -- Multiple FFT, real in-place --
pub extern fn vDSP_fftm_zrip(Setup: FFTSetup, C: *const SplitComplex, IC: Stride, IM: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zripD(Setup: FFTSetupD, C: *const DoubleSplitComplex, IC: Stride, IM: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zript(Setup: FFTSetup, C: *const SplitComplex, IC: Stride, IM: Stride, Buffer: *const SplitComplex, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zriptD(Setup: FFTSetupD, C: *const DoubleSplitComplex, IC: Stride, IM: Stride, Buffer: *const DoubleSplitComplex, Log2N: Length, M: Length, Direction: c_int) void;

// -- Multiple FFT, real out-of-place --
pub extern fn vDSP_fftm_zrop(Setup: FFTSetup, A: *const SplitComplex, IA: Stride, IMA: Stride, C: *const SplitComplex, IC: Stride, IMC: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zropD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA: Stride, IMA: Stride, C: *const DoubleSplitComplex, IC: Stride, IMC: Stride, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zropt(Setup: FFTSetup, A: *const SplitComplex, IA: Stride, IMA: Stride, C: *const SplitComplex, IC: Stride, IMC: Stride, Buffer: *const SplitComplex, Log2N: Length, M: Length, Direction: c_int) void;
pub extern fn vDSP_fftm_zroptD(Setup: FFTSetupD, A: *const DoubleSplitComplex, IA: Stride, IMA: Stride, C: *const DoubleSplitComplex, IC: Stride, IMC: Stride, Buffer: *const DoubleSplitComplex, Log2N: Length, M: Length, Direction: c_int) void;

// -- Interleaved conversion --
pub extern fn vDSP_ctoz(C: [*]const ComplexF32, IC: Stride, Z: *const SplitComplex, IZ: Stride, N: Length) void;
pub extern fn vDSP_ctozD(C: [*]const ComplexF64, IC: Stride, Z: *const DoubleSplitComplex, IZ: Stride, N: Length) void;
pub extern fn vDSP_ztoc(Z: *const SplitComplex, IZ: Stride, C: [*]ComplexF32, IC: Stride, N: Length) void;
pub extern fn vDSP_ztocD(Z: *const DoubleSplitComplex, IZ: Stride, C: [*]ComplexF64, IC: Stride, N: Length) void;

// ============================================================================
// fixed_fft
// ============================================================================

pub extern fn vDSP_FFT16_copv(Output: [*]f32, Input: [*]const f32, Direction: c_int) void;
pub extern fn vDSP_FFT32_copv(Output: [*]f32, Input: [*]const f32, Direction: c_int) void;
pub extern fn vDSP_FFT16_zopv(Or: [*]f32, Oi: [*]f32, Ir: [*]const f32, Ii: [*]const f32, Direction: c_int) void;
pub extern fn vDSP_FFT32_zopv(Or: [*]f32, Oi: [*]f32, Ir: [*]const f32, Ii: [*]const f32, Direction: c_int) void;

// ============================================================================
// dft
// ============================================================================

// -- Setup --
pub extern fn vDSP_DFT_CreateSetup(Previous: ?DFTSetup, Length: Length) ?DFTSetup;
pub extern fn vDSP_DFT_zop_CreateSetup(Previous: ?DFTSetup, Length: Length, Direction: c_int) ?DFTSetup;
pub extern fn vDSP_DFT_zop_CreateSetupD(Previous: ?DFTSetupD, Length: Length, Direction: c_int) ?DFTSetupD;
pub extern fn vDSP_DFT_zrop_CreateSetup(Previous: ?DFTSetup, Length: Length, Direction: c_int) ?DFTSetup;
pub extern fn vDSP_DFT_zrop_CreateSetupD(Previous: ?DFTSetupD, Length: Length, Direction: c_int) ?DFTSetupD;
pub extern fn vDSP_DCT_CreateSetup(Previous: ?DFTSetup, Length: Length, Type: c_int) ?DFTSetup;
// -- Destroy --
pub extern fn vDSP_DFT_DestroySetup(Setup: ?DFTSetup) void;
pub extern fn vDSP_DFT_DestroySetupD(Setup: ?DFTSetupD) void;
// -- Execute (split complex) --
pub extern fn vDSP_DFT_Execute(Setup: DFTSetup, Ir: [*]const f32, Ii: [*]const f32, Or: [*]f32, Oi: [*]f32) void;
pub extern fn vDSP_DFT_ExecuteD(Setup: DFTSetupD, Ir: [*]const f64, Ii: [*]const f64, Or: [*]f64, Oi: [*]f64) void;
// -- Legacy execute with stride --
pub extern fn vDSP_DFT_zop(Setup: DFTSetup, Ir: [*]const f32, Ii: [*]const f32, Is: Stride, Or: [*]f32, Oi: [*]f32, Os: Stride, Direction: c_int) void;
// -- DCT execute --
pub extern fn vDSP_DCT_Execute(Setup: DFTSetup, Input: [*]const f32, Output: [*]f32) void;
// -- Interleaved setup --
pub extern fn vDSP_DFT_Interleaved_CreateSetup(Previous: ?DFTInterleavedSetup, Length: Length, Direction: c_int, RealToComplex: c_int) ?DFTInterleavedSetup;
pub extern fn vDSP_DFT_Interleaved_CreateSetupD(Previous: ?DFTInterleavedSetupD, Length: Length, Direction: c_int, RealToComplex: c_int) ?DFTInterleavedSetupD;
// -- Interleaved execute --
pub extern fn vDSP_DFT_Interleaved_Execute(Setup: DFTInterleavedSetup, Iri: [*]const ComplexF32, Ori: [*]ComplexF32) void;
pub extern fn vDSP_DFT_Interleaved_ExecuteD(Setup: DFTInterleavedSetupD, Iri: [*]const ComplexF64, Ori: [*]ComplexF64) void;
// -- Interleaved destroy --
pub extern fn vDSP_DFT_Interleaved_DestroySetup(Setup: ?DFTInterleavedSetup) void;
pub extern fn vDSP_DFT_Interleaved_DestroySetupD(Setup: ?DFTInterleavedSetupD) void;

// ============================================================================
// biquad
// ============================================================================
